+ Chỉnh lại title cho các trang ở client

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Livestream/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Livestream/Index.cshtml
@@ -4,7 +4,11 @@
 }
 @using HmsService.ViewModels
 @model SessionViewModel
-
+<div class="row" style="padding-top:74px;">
+    <div class="col-md-12 text-center voting-title">
+        <h3>Livestream</h3>
+    </div>
+</div>
 @if (Model != null)
 {
     if (Model.LivestreamUrl != null)
