--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
@@ -12,14 +12,14 @@
 
 @*<link href="~/Content/bootstrap/Poll/css/bootstrap.css" rel="stylesheet" />*@
 <div class="container" >
-    <div class="row" style="padding-top: 64px;">
+    <div class="row" style="padding-top: 74px;">
         <div class="col-md-12 text-center voting-title">
             <h3>Bình chọn</h3>
         </div>
     </div>
     @if (Model == null)
     {
-        <h3>Hiện tại chúng tôi chưa tiến hành bình chọn</h3>
+        <h3 class="text-center">Hiện tại chúng tôi chưa tiến hành bình chọn</h3>
     }
     else
     {
