+ Chỉnh lại title ở trên broswer cho trang client + Thay icon logo ở góc trái trên màn hình mobile (client) nhưng chưa đạt

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/main.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/main.css
@@ -57,10 +57,17 @@
 
 .sidenav-header-custom {
     background: #458ca4 !important;
+    padding:7px !important;
 }
 
 .btn-custom-defaul {
     background-color: #fecb24;
     color:black;
     font-weight:bold;
+}
+
+.login-form-container {
+    background-color: #fecb24;
+    color: black;
+    opacity:1;
 }
