--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
@@ -59,8 +59,8 @@
                         <input value="22223333" class="input100" id="txt-code-login" type="text" name="pass" placeholder="Vui Lòng Nhập Mã Tham Gia">
                     </div>
 
-                    <div class="container-login100-form-btn p-t-10">
-                        <button class="login100-form-btn" id="btn-check-code">
+                    <div class="container-login100-form-btn p-t-10 ">
+                        <button class="login100-form-btn login-form-container" id="btn-check-code">
                             Đăng nhập
                         </button>
                     </div>
