--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
@@ -3,7 +3,7 @@
 @model QA
 
 @{
-    ViewBag.Title = "Q&A";
+    ViewBag.Title = "Hỏi đáp";
     string curPath = Request.Url.GetLeftPart(UriPartial.Authority) + Request.ApplicationPath;
     var random = new Random();
 }
