--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Session/Index.cshtml
@@ -3,6 +3,7 @@
     //Layout = null;
     //string curPath = Request.Url.GetLeftPart(UriPartial.Authority) + Request.ApplicationPath;
     int eventId = ViewBag.EventId;
+    ViewBag.Title = "Các hoạt động";
 }
 
 <!DOCTYPE html>
