--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Event Interaction</title>
+    <title>Join.vn - @ViewBag.Title</title>
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/css/bootstrap.min.css">
     <!-- Google fonts - Roboto -->
@@ -58,7 +58,11 @@
                     <img src="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/img/avatar-1.jpg" alt="person" class="img-fluid rounded-circle">
                     <h2 class="h5 text-uppercase">Anderson Hardy</h2><span class="text-uppercase">Web Developer</span>
                 </div>
-                <div class="sidenav-header-logo"><a class="brand-small text-center" style="font-family: Montserrat-Regular"> <strong>J</strong></a></div>
+                <div class="sidenav-header-logo">
+                <a class="brand-small text-center" style="font-family: Montserrat-Regular">
+                    <img src="~/Content/img/NewLogo.png" />
+                </a>
+                </div>
             </div>
             <div class="main-menu">
                 <ul id="side-main-menu" class="side-menu list-unstyled">
