--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Thông tin sự kiện";
 }
 @using HmsService.ViewModels;
 @model EventViewModel
