--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Timeline/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Timeline/Index.cshtml
@@ -1,17 +1,17 @@
 ﻿
 @{
-    ViewBag.Title = "Timeline";
+    ViewBag.Title = "Dòng thời gian";
 }
 @using HmsService.Models.Entities;
 
 @model IEnumerable<Timeline>
 
 <div class="container" style="padding-top:74px;">
-    <div class="row">
+    @*<div class="row">
         <div class="col-md-12 text-center voting-title">
             <h3>Dòng thời gian</h3>
         </div>
-    </div>
+    </div>*@
     @if (Model.Count() == 0)
     {
         <h3 class="text-center">Hiện tại không có dòng thời gian nào</h3>
