Add Logo Client + fix ui ở màn hình desktop

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                 </div>
                 <div class="sidenav-header-logo">
                 <a class="brand-small text-center" style="font-family: Montserrat-Regular">
-                    <img src="~/Content/img/NewLogo.png" />
+                    <img src="~/Content/img/LogoMakr_7clv31.png"/>
                 </a>
                 </div>
             </div>
