--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
@@ -15,7 +15,7 @@
 }
 else
 {
-    <div class="row" style="padding-top: 64px;">
+    <div class="row" style="padding-top: 64px;padding-left: 16%;">
         @{
             foreach (var speaker in Model.CollectionItems)
             {
