--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
@@ -48,17 +48,16 @@
     </div>
     
     <div class="limiter">
-        <div class="container-login100" style="background-image: url('../../Content/img/Pi5sTPQ.jpg');">
-            <div class="wrap-login100 p-t-190 p-b-30">
+        <div class="container-login100" style="background-color:#005f75;padding-top:15px;left:unset!important;">
+            <div style="padding-top: 60px;"><img src="~/Content/img/LogoMakr_6CVPn5.png" style="width:220px;height:200px;" /></div>
+            <div class="wrap-login100 p-b-30" style="left:unset!important">
                 <div class="login100-form validate-form" id="div-section">
-
                     <div class="message-error">
                         <h6>Code không đúng, vui lòng nhập lại</h6>
                     </div>
                     <div class="wrap-input100 validate-input m-b-10" data-validate="Vui Lòng Nhập Mã Tham Gia">
                         <input value="22223333" class="input100" id="txt-code-login" type="text" name="pass" placeholder="Vui Lòng Nhập Mã Tham Gia">
                     </div>
-
                     <div class="container-login100-form-btn p-t-10 ">
                         <button class="login100-form-btn login-form-container" id="btn-check-code">
                             Đăng nhập
@@ -101,7 +100,7 @@
                         if (data.data != null) {
                             $('.message-error').css('display', 'none');
                             $('.container-loader').css('display', 'none');
-                            $('#txt-code-login').val("");
+                            //$('#txt-code-login').val("");
                             //$('#div-section').empty();
                             //for (var i = 0; i < data.data.length; i++) {
                             //    var sectionTemplate = $('#session-template').clone();
