--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Session/Index.cshtml
@@ -44,7 +44,7 @@
                 </ul>
             </div>
             <!--Tab content-->
-            <div class="tab-content">
+            <div class="tab-content" style="padding-top: 63px;">
                 <div class="tab-pane active" id="tab_1">
                     <div class="wrap-login100 p-t-190 p-b-30">
                         <div class="login100-form validate-form" id="div-section">
