--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Events/Add.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Events/Add.cshtml
@@ -69,7 +69,7 @@
             </div>
             <div class="box-footer">
                 <button class="btn btn-primary pull-right" id="btn-add-event">Lưu</button>
-                <button class="btn btn-danger pull-right margin-r-5">Hủy</button>
+                <a href="/" class="btn btn-danger pull-right margin-r-5">Hủy</a>
             </div>
         </div>
 
@@ -77,22 +77,6 @@
 
 </div>
 
-<div class="box">
-    <form id="pick-form">
-        <div class="field">
-            <div class="control">
-                <button class="button" type="button" id="picker">Pick file</button>
-                <input type="hidden" id="fileupload">
-            </div>
-        </div>
-        <div class="field">
-            <div class="control">
-                <input class="button" type="submit" value="Submit">
-            </div>
-        </div>
-        <div id="thumbnail-container"></div>
-    </form>
-</div>
 
 @section scripts {
     <script>
