+ Đổi màu nút thêm sự kiện + Chỉnh lại chỉ load ViewModel Interaction cho đỡ nặng (làm render trang chậm) + Cắt javascript và html ở trang cấu hình session ra 2 file riêng (cshtml và js)

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Events/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Events/Index.cshtml
@@ -12,7 +12,7 @@
     <span>Danh sách sự kiện</span>
 
     <!--Button Add New Event-->
-    <a class="btn btn-info btn-lg btn-add-new-event" href="@Url.Action("Add","Events")">Tạo mới</a>
+    <a class="btn btn-lg btn-add-new-event btn-custom" href="@Url.Action("Add","Events")">Tạo mới</a>
 </div>
 <div class="col-md-12">
     <div class="box box-warning box-is-running">
