--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/admin.css
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/admin.css
@@ -41,7 +41,7 @@
     padding-left: 15px;
     
     font-size: medium;
-    color: gray;
+    color: black;
     font-weight: 600;
 }
 
@@ -146,4 +146,8 @@
     color: black;
     background-color: #fecb24;
     font-weight:bold !important;
+}
+
+.margin-bottom-10 {
+    margin-bottom:15px;
 }
