--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -137,7 +137,7 @@
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu" data-widget="tree">
 
-                    <li class="treeview">
+                    <li class="treeview active menu-open">
                         <a href="#">
                             <i class="fa fa-pie-chart"></i>
                             <span>Cấu hình chung</span>
@@ -155,7 +155,8 @@
                         </ul>
                     </li>
 
-                    <li class="treeview">
+                    <li><a href="@Url.Action("Index","ManageSession", new { id = eventId})"><i class="fa fa-wrench" aria-hidden="true"></i> <span>Trung tâm điều khiển</span></a></li>
+                    @*<li class="treeview">
                         <a href="#">
                             <i class="fa fa-pie-chart"></i>
                             <span>Trung tâm điểu khiển</span>
@@ -170,11 +171,11 @@
                             <li><a href="@Url.Action("Index","Activity" , new { id = eventId})"><i class="fa fa-rocket" aria-hidden="true"></i><span>Hoạt Động</span></a></li>
 
                         </ul>
-                    </li>
+                    </li>*@
 
                     <li><a href="@Url.Action("Index","Events", new { id = eventId})"><i class="fa fa-sign-out"></i> <span>Đăng Xuất</span></a></li>
 
-                    
+
 
                 </ul>
             </section>
