--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -104,6 +104,10 @@
     <script src="~/Content/DataTables/datatables.min.js"></script>
     <!--Sweet Alert-->
     <script src="~/Content/bootstrap-sweetalert-master/dist/sweetalert.min.js"></script>
+    <!--Google Map-->
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7Meb98e_PppAWoqobk4Ml1rFygPl9eUI&callback=initMap">
+    </script>
 
 
 </head>
