--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
@@ -55,14 +55,11 @@
                     <div class="input-group-addon">
                         <i class="fa fa-location-arrow" aria-hidden="true"></i>
                     </div>
-                    <input type="text" id="txtAddress" class="form-control" placeholder="Enter address where you take place the event" value="@Html.Raw(Model.Address)">
+                    <input type="text" id="txtAddress" class="form-control" placeholder="Vui lòng nhập địa chỉ" value="@Html.Raw(Model.Address)">
                     <input type="text" id="txtLng" class="form-control" placeholder="Vui lòng nhập kinh độ hoặc nhấn vào bản đồ để lấy" value="">
                     <input type="text" id="txtLat" class="form-control" placeholder="Vui lòng nhập vĩ độ hoặc nhấn vào bản đồ để lấy" value="">
                 </div>
-                <div class="row">
-                    <div id="map-canvas" style="width:100%; height:200px;"></div>
-
-                </div>
+                <div id="map-canvas" style="width:100%; height:500px;"></div>
             </div>
 
             <div class="form-group">
@@ -85,13 +82,21 @@
             </div>
 
             <div class="form-group">
-                <label class="col-sm-3 form-control-label">Đường dẫn hình ảnh:</label>
-                <div class="col-sm-9 input-group">
-                    <div class="input-group-addon">
-                        <i class="fa fa-link" aria-hidden="true"></i>
+                <div class="row" style="padding:0 15px 0 15px">
+                    <label class="col-lg-3 control-label">Hình đại diện</label>
+                    <div class="col-lg-9" style="padding-left:0">
+                        <div class="field">
+                            <div class="control">
+                                <button class="button" type="button" id="picker">Chọn file</button>
+                                <input type="hidden" id="fileupload">
+                            </div>
+                        </div>
+                        <div id="thumbnail-container">
+                            <img src="@(Model.ImageURL)" />
+                        </div>
                     </div>
-                    <input type="text" id="txtAddress" class="form-control" placeholder="" value="@Html.Raw(Model.ImageURL)">
                 </div>
+                
             </div>
 
             <div class="line"></div>
@@ -115,6 +120,10 @@
 
 
 @section scripts {
+    <!--Google Map-->
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7Meb98e_PppAWoqobk4Ml1rFygPl9eUI&callback=initMap">
+    </script>
     <script>
         $(document).ready(function () {
             $('#btnUpdate').click(function () {
@@ -143,16 +152,12 @@
             //Date range picker
             $('#reservation').daterangepicker();
 
-  
 
 
-           
+
+
         });
         // Initialize and add the map
-        
-
-        
-
         function initMap() {
             var map;
             var myLatlng = { lat: 10.8528727, lng: 106.629381 };
@@ -179,6 +184,66 @@
                 $('#txtLng').val(lgn);
                 //alert(latLgn);
             });
+
+
+            // Create the search box and link it to the UI element.
+            //var input = document.getElementById('txtAddress');
+            //var searchBox = new google.maps.places.SearchBox(input);
+            //map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+
+            //// Bias the SearchBox results towards current map's viewport.
+            //map.addListener('bounds_changed', function () {
+            //    searchBox.setBounds(map.getBounds());
+            //});
+
+            //var markers = [];
+            //// Listen for the event fired when the user selects a prediction and retrieve
+            //// more details for that place.
+            //searchBox.addListener('places_changed', function () {
+            //    var places = searchBox.getPlaces();
+
+            //    if (places.length == 0) {
+            //        return;
+            //    }
+
+            //    // Clear out the old markers.
+            //    markers.forEach(function (marker) {
+            //        marker.setMap(null);
+            //    });
+            //    markers = [];
+
+            //    // For each place, get the icon, name and location.
+            //    var bounds = new google.maps.LatLngBounds();
+            //    places.forEach(function (place) {
+            //        if (!place.geometry) {
+            //            console.log("Returned place contains no geometry");
+            //            return;
+            //        }
+            //        var icon = {
+            //            url: place.icon,
+            //            size: new google.maps.Size(71, 71),
+            //            origin: new google.maps.Point(0, 0),
+            //            anchor: new google.maps.Point(17, 34),
+            //            scaledSize: new google.maps.Size(25, 25)
+            //        };
+
+            //        // Create a marker for each place.
+            //        markers.push(new google.maps.Marker({
+            //            map: map,
+            //            icon: icon,
+            //            title: place.name,
+            //            position: place.geometry.location
+            //        }));
+
+            //        if (place.geometry.viewport) {
+            //            // Only geocodes have viewport.
+            //            bounds.union(place.geometry.viewport);
+            //        } else {
+            //            bounds.extend(place.geometry.location);
+            //        }
+            //    });
+            //    map.fitBounds(bounds);
+            //});
         }
 
     </script>
