--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -104,7 +104,9 @@
     <script src="~/Content/DataTables/datatables.min.js"></script>
     <!--Sweet Alert-->
     <script src="~/Content/bootstrap-sweetalert-master/dist/sweetalert.min.js"></script>
-    
+    <!--Filestack-->
+    <script src="~/Content/Filestack/filestack.min.js"></script>
+
 
 
 </head>
