--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_LayoutEvent.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_LayoutEvent.cshtml
@@ -41,7 +41,7 @@
     <script src="~/Content/AdminLTE-master/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
     <!--Sweet Alert-->
     <script src="~/Content/bootstrap-sweetalert-master/dist/sweetalert.min.js"></script>
-    <!--Sweet Alert-->
+    <!--Filestack-->
     <script src="~/Content/Filestack/filestack.min.js"></script>
 
 </head>
