--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
@@ -15,7 +15,7 @@
 }
 else
 {
-    <div class="row" style="padding-top: 64px;padding-left: 16%;">
+    <div class="row custom-row">
         @{
             foreach (var speaker in Model.CollectionItems)
             {
@@ -50,7 +50,7 @@ else
                 <p class="speaker-description"></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
             </div>
         </div>
     </div>
