--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Sponsor/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Sponsor/Index.cshtml
@@ -14,7 +14,7 @@
 }
 else
 {
-    <div class="row" style="padding-top: 64px;padding-left: 16%;">
+    <div class="row custom-row">
         @{
             foreach (var sponsor in Model.CollectionItems)
             {
@@ -45,7 +45,7 @@ else
                 <p class="sponsor-description"></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
             </div>
         </div>
     </div>
